# flatbuffer-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
protos/: proto.fbs
